--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engine": {
+    "node": "12.17.0",
+    "npm": "6.14.4"
+  },
   "scripts": {
     "start": "node ./server/index.js",
     "backend": "nodemon ./server/index.js",
