--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "backend": "nodemon ./server/index.js",
     "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "sy-lee",
   "license": "ISC",
